--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
 		/>
 	</head>
 	<body>
-		<div class="container" role="container">
-			<div class="card" role="card">
+		<div class="container">
+			<div class="card">
 				<img
 					class="graphic"
 					src="./assets/images/illustration-article.svg"
 					alt=""
 				/>
-				<div class="label" role="label">
-					<p class="label-tag" role="label-tag">Learning</p>
+				<div class="label">
+					<p class="label-tag">Learning</p>
 				</div>
-				<p class="date-publish" role="date-publish">Published 21 Dec 2023</p>
-				<a class="title" role="title" href="frontend.com"
-					>HTML & CSS foundations</a
-				>
-				<p class="description" role="description">
+				<p class="date-publish">Published 21 Dec 2023</p>
+				<a class="title" href="frontend.com">HTML & CSS foundations</a>
+				<p class="description">
 					These languages are the backbone of every website, defining structure,
 					content, and presentation.
 				</p>
