--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		/>
 	</head>
 	<body>
-		<div class="container">
+		<main class="container">
 			<div class="card">
 				<img
 					class="graphic"
@@ -25,7 +25,7 @@
 					<p class="label-tag">Learning</p>
 				</div>
 				<p class="date-publish">Published 21 Dec 2023</p>
-				<a class="title" href="frontend.com">HTML & CSS foundations</a>
+				<h1><a class="title" href="frontend.com">HTML & CSS foundations</a></h1>
 				<p class="description">
 					These languages are the backbone of every website, defining structure,
 					content, and presentation.
@@ -39,6 +39,6 @@
 					<h4>Greg Hooper</h4>
 				</div>
 			</div>
-		</div>
+		</main>
 	</body>
 </html>
