--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<p class="label-tag">Learning</p>
 				</div>
 				<p class="date-publish">Published 21 Dec 2023</p>
-				<h1><a class="title" href="frontend.com">HTML & CSS foundations</a></h1>
+				<a class="title" href="frontend.com">HTML & CSS foundations</a>
 				<p class="description">
 					These languages are the backbone of every website, defining structure,
 					content, and presentation.
@@ -36,7 +36,7 @@
 						src="./assets/images/image-avatar.webp"
 						alt="profile-picture"
 					/>
-					<h4>Greg Hooper</h4>
+					<h1>Greg Hooper</h1>
 				</div>
 			</div>
 		</main>
